complete the header

--- a/index.html
+++ b/index.html
@@ -9,20 +9,33 @@
 </head>
 <body>
     <header>
-        <ul>
-            <li>Header Logo</li>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
+        <div class="header">
+                <div class="left-header">
+                    <ul>
+                        <li>Header Logo</li>
+                    </ul>
+                </div>
+                <div class="right-header">
+                    <ul>
+                        <li>header link one</li>
+                        <li>header link two</li>
+                        <li>header link three</li>
+                    </ul>
+                </div>
+        
+        </div>
     </header>
-    <div class="top-bar">
-        <h1>This website is awesome</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam repellat obcaecati laborum?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, quisquam?
-        </p>
-        <button>Sign up</button>
-        <img src="" alt="">
+    <div class="hero">
+        <div class="hero-left">
+            <h1>This website is awesome</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam repellat obcaecati laborum?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, quisquam?
+            </p>
+            <button>Sign up</button>
+        </div>
+        <div class="hero-right">
+            <img src="" alt="">
+        </div>
     </div>
     <div class="content">
         <h2>Some random information</h2>
