--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
         
         </div>
     </header>
-    <div class="hero">
-        <div class="hero-left">
-            <h1>This website is awesome</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam repellat obcaecati laborum?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, quisquam?
-            </p>
-            <button>Sign up</button>
-        </div>
-        <div class="hero-right">
-            <img src="" alt="">
+    <div class="hero-container">
+        <div class="hero">
+            <div class="hero-left">
+                <h1>This website is awesome</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam repellat obcaecati laborum?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, quisquam?
+                </p>
+                <button>Sign up</button>
+            </div>
+            <div class="hero-right">
+                <img src="./images/relax_field.jpeg" alt="placeholder">
+            </div>
         </div>
     </div>
     <div class="content">
