--- a/index.html
+++ b/index.html
@@ -41,14 +41,25 @@
     </div>
     <div class="content">
         <h2>Some random information</h2>
-        <img src="" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem.</p>
-        <img src="" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem.</p>
-        <img src="" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem.</p>
-        <img src="" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem.</p>
+
+        <div class="content-boxes">
+            <div class="illustration">
+                <img src="./images/CBD_Oil_.jpeg" alt="CBD Oil" class="illust-img">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem.</p>
+            </div>
+            <div class="illustration">
+                <img src="./images/magnesium.webp" alt="magnesium" class="illust-img">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem.</p>
+            </div>
+            <div class="illustration">
+                <img src="./images/nutritional_yeast.webp" alt="nutritional nutritional_yeast" class="illust-img">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem.</p>
+            </div>
+            <div class="illustration">
+                <img src="./images/Sleep-Tea.avif" alt="sleep Sleep-Tea" class="illust-img">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem.</p>
+            </div>
+        </div>    
     </div>
     <div class="bottom-bar">
         <figure>
