Quote section complete

--- a/index.html
+++ b/index.html
@@ -62,15 +62,10 @@
         </div>    
     </div>
     <div class="bottom-bar">
-        <figure>
-            <blockquote>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus magnam iure similique soluta debitis, corporis excepturi totam sequi ipsa eos?
-            </blockquote>
-            <figcaption>
-                Thor
-                <cite>God of Thunder</cite>
-            </figcaption>
-        </figure>
+        <div class="quote">
+            <p class="inspiring">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus magnam iure similique soluta debitis, corporis excepturi totam sequi ipsa eos?</p>
+            <p class="cite"> Thor, God of Thunder </p>
+        </div>    
     </div>
     <div class="call-to-action">
         <h2>Call to action! It's time!</h2>
