--- a/index.html
+++ b/index.html
@@ -68,9 +68,15 @@
         </div>    
     </div>
     <div class="call-to-action">
-        <h2>Call to action! It's time!</h2>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button>Sign up</button>
+        <div class="cta-box">
+            <div class="cta-box-content">
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="cta-box-btn">
+                <button>Sign up</button>
+            </div>
+        </div>
     </div>
     <footer>
         Copyright The Odin Project 2021
