--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
     </div>
     <footer>
-        Copyright The Odin Project 2021
+        <p>Copyright &copy; The Odin Project 2021</p>
     </footer>
 </body>
 </html>
