Clean up CSS and styles.
Went over all sections to adjust CSS and html.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="bottom-bar">
         <div class="quote">
             <p class="inspiring">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus magnam iure similique soluta debitis, corporis excepturi totam sequi ipsa eos?</p>
-            <p class="cite"> Thor, God of Thunder </p>
+            <p class="cite"> -Thor, God of Thunder </p>
         </div>    
     </div>
     <div class="call-to-action">
